--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   intl: ^0.19.0
+  share_plus: ^7.2.1
+  pdf: ^3.10.4
+  printing: ^5.11.0
+  path_provider: ^2.1.2
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
