arreglando problemas de inventario y resumen de caja

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,13 @@
-org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=1G -Dfile.encoding=UTF-8
+
+# Configuración para Flutter
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Configuración para solucionar problemas con Java 21
+org.gradle.java.home=C:\\Program Files\\RedHat\\java-21-openjdk-21.0.4.0.7-1
+
+# Optimización de rendimiento
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
