--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   path_provider: ^2.1.2
   url_launcher: ^6.2.4
   web_socket_channel: ^3.0.1
+  excel: ^4.0.6
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
