--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -5,7 +5,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 # Configuración para solucionar problemas con Java 21
-org.gradle.java.home=C:\\Program Files\\RedHat\\java-21-openjdk-21.0.4.0.7-1
+org.gradle.java.home=D:\\android studio\\jbr
 
 # Optimización de rendimiento
 org.gradle.caching=true
