--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   web_socket_channel: ^3.0.1
   excel: ^4.0.6
   permission_handler: ^11.3.1
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
