cambios en la estructura y estilos

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Configuración de Variables de Entorno - Sopa y Carbon
+# Configuración de Variables de Entorno - Vercy Motos
 # =====================================================
 
 # AMBIENTE DE EJECUCIÓN
