--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "serch_restapp" "\0"
+            VALUE "CompanyName", "Vercy Motos" "\0"
+            VALUE "FileDescription", "vercy_motos" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "serch_restapp" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "serch_restapp.exe" "\0"
-            VALUE "ProductName", "serch_restapp" "\0"
+            VALUE "InternalName", "vercy_motos" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 Vercy Motos. All rights reserved." "\0"
+            VALUE "OriginalFilename", "vercy_motos.exe" "\0"
+            VALUE "ProductName", "Vercy Motos" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
