--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: serch_restapp
-description: "A new Flutter project."
+name: vercy_motos
+description: "Sistema de ventas para Vercy Motos"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -62,6 +62,7 @@ dependencies:
   url_launcher: ^6.2.4
   web_socket_channel: ^3.0.1
   excel: ^4.0.6
+  file_picker: ^8.0.0
   permission_handler: ^11.3.1
   universal_html: ^2.2.4
 
